Water automata fasten from 800 msec to 10 msec