@@ -4,8 +4,11 @@
   :license {:name "Eclipse Public License"
             :url  "http://www.eclipse.org/legal/epl-v10.html"}
   :dependencies [[org.clojure/clojure "1.10.0"]
-                 [seesaw "1.5.0"]]
+                 [seesaw "1.5.0"]
+                 [uncomplicate/neanderthal "0.26.1"]]
   :repl-options {:init-ns computer_graphics_coursework_backend.core}
   :main computer_graphics_coursework_backend.core
   :profiles {:uberjar {:aot :all}}
-  :java-cmd "/usr/lib/jvm/java-1.11.0-openjdk-amd64/bin/java")
+  :java-cmd "/usr/lib/jvm/java-1.11.0-openjdk-amd64/bin/java"
+  :jvm-opts "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED")
+
